force-app/main/default/objects/Knowledge__kav/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>