force-app/main/default/objects/Knowledge__kav/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Master Data Management</fullName>
            </value>
            <value>
                <fullName>Identification</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Card Management</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>AML</fullName>
            </value>
            <value>
                <fullName>Seizures</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Anti-Fraud Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>