force-app/main/default/objects/Knowledge__kav/fields/Type_II__c.field-meta.xml
<CustomField>
    <fullName>Type_II__c</fullName>
    <label>Type II</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card Issue</fullName>
            </value>
            <value>
                <fullName>Partner Card Block</fullName>
            </value>
            <value>
                <fullName>Card Chargeback</fullName>
            </value>
            <value>
                <fullName>Card Return/Delivery</fullName>
            </value>
            <value>
                <fullName>Fraudulent Transaction Monitoring</fullName>
            </value>
            <value>
                <fullName>Card Decline</fullName>
            </value>
            <value>
                <fullName>Partner Card Unblock</fullName>
            </value>
            <value>
                <fullName>Partner Card Closure</fullName>
            </value>
            <value>
                <fullName>Closure Request</fullName>
            </value>
            <value>
                <fullName>Account Statement</fullName>
            </value>
            <value>
                <fullName>Account Confirmation</fullName>
            </value>
            <value>
                <fullName>Tax ID Input</fullName>
            </value>
            <value>
                <fullName>Phone Change (Without access)</fullName>
            </value>
            <value>
                <fullName>Identification Creation</fullName>
            </value>
            <value>
                <fullName>Identification Issues</fullName>
            </value>
            <value>
                <fullName>Identification Complaints</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>User Complaint</fullName>
            </value>
            <value>
                <fullName>Payment Request</fullName>
            </value>
            <value>
                <fullName>Direct Debit Return</fullName>
            </value>
            <value>
                <fullName>Incoming Payment investigation</fullName>
            </value>
            <value>
                <fullName>Payment Recall</fullName>
            </value>
            <value>
                <fullName>Seizure Information Request</fullName>
            </value>
            <value>
                <fullName>Seizures Payout</fullName>
            </value>
            <value>
                <fullName>P-Konto</fullName>
            </value>
            <value>
                <fullName>Information Request</fullName>
            </value>
            <value>
                <fullName>Bank Data Deletion</fullName>
            </value>
            <value>
                <fullName>Bank Data Request</fullName>
            </value>
            <value>
                <fullName>Verification Message Issue</fullName>
            </value>
            <value>
                <fullName>General Tech Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>