force-app/main/default/objects/Knowledge__kav/recordTypes/Solarisbank.recordType-meta.xml
<RecordType>
    <fullName>Solarisbank</fullName>
    <active>true</active>
    <description>Customer Support Processes Description</description>
    <label>Solarisbank</label>
</RecordType>