force-app/main/default/objects/Knowledge__kav/listViews/All_FAQ_Draft_Articles.listView-meta.xml
<ListView>
    <fullName>All_FAQ_Draft_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Information__c</columns>
    <columns>LANGUAGE</columns>
    <columns>Type__c</columns>
    <columns>Type_II__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.FAQ</value>
    </filters>
    <label>All FAQ Draft Articles</label>
</ListView>