force-app/main/default/objects/Knowledge__kav/listViews/All_FAQ_Published_Articles.listView-meta.xml
<ListView>
    <fullName>All_FAQ_Published_Articles</fullName>
    <columns>TITLE</columns>
    <columns>Information__c</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.FAQ</value>
    </filters>
    <filters>
        <field>IS_MASTER_LANGUAGE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All FAQ Published Articles</label>
</ListView>