force-app/main/default/objects/Knowledge__kav/listViews/All_Knowledge_Records.listView-meta.xml
<ListView>
    <fullName>All_Knowledge_Records</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Knowledge Records</label>
</ListView>