force-app/main/default/objects/Knowledge__kav/listViews/All_Solarisbank_Draft.listView-meta.xml
<ListView>
    <fullName>All_Solarisbank_Draft</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Type__c</columns>
    <columns>Type_II__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Solarisbank</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Solarisbank Draft</label>
</ListView>