force-app/main/default/objects/Knowledge__kav/listViews/Draft_Articles_Local.listView-meta.xml
<ListView>
    <fullName>Draft_Articles_Local</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_MASTER_LANGUAGE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Draft Articles Local</label>
</ListView>