force-app/main/default/objects/Knowledge__kav/listViews/Published_Articles_Local.listView-meta.xml
<ListView>
    <fullName>Published_Articles_Local</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>IS_MASTER_LANGUAGE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Published Articles Local</label>
</ListView>